# AgentLens

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: examples.md  schema.md
examples/: generate_sample_trace.py
examples/agents/: code_reviewer.py  config.py  research_assistant.py  task_manager.py
hf_dataset/: README.md  dataset_stats.json
hf_dataset/data/: summaries.jsonl  traces.jsonl
hf_dataset/data/aggregate_reports/: 5ea6f120-be32-47a8-ad45-6c4e4708e478.json  6b1ce5da-0498-400c-b1dd-eefde7930530.json  71b9fd18-d4aa-494a-b384-92ae8670b346.json  82b9e747-373b-4a5e-a40e-896f103f5590.json  8fb95996-43b2-46ac-82bf-1ab1b9f757f3.json  99d5c274-8e6c-4775-b3bc-af784a54c5fa.json  ac2b2b1d-2f25-4f68-b006-1dfd3d7ca2a3.json  b0ce0c7c-61cb-4b4d-b74c-8116b1b658c0.json  bcb37c1a-7e5e-481c-97c7-8e759fc7f830.json  bd6c526e-b5d7-41a0-9f52-97821e9b99ab.json  bd9b119c-8859-42df-ac5a-c5b4bf20f6e6.json  f4576074-9985-482c-b536-02c919f909cc.json
paper/: agentlens_writeup.md
reports/: 70066c3f-43df-4345-a4a5-5be2e1fa68e8.json  795a663a-a3c7-4ade-a7ae-76000e919bd7.json
schemas/: trace_schema_v1.json
scripts/: export_schema.py  prepare_hf_dataset.py
src/agentlens/: __init__.py  __main__.py  cli.py
src/agentlens/aggregation/: __init__.py  aggregator.py  models.py  pipeline.py  summarizer.py
src/agentlens/analysis/: __init__.py  __main__.py  analyzer.py  autonomy.py  escalations.py  failures.py  models.py  oversight_gap.py  plots.py  report.py  tools.py
src/agentlens/privacy/: __init__.py  __main__.py  leakage_test.py  pii_generator.py  plots.py  reidentification_test.py  runner.py  trace_factory.py  utility_tradeoff.py
src/agentlens/schema/: __init__.py  enums.py  trace.py  validators.py
src/agentlens/sdk/: __init__.py  action_context.py  tracer.py  writer.py
src/agentlens/sdk/integrations/: langchain_handler.py
src/agentlens/utils/: __init__.py  hashing.py  timestamps.py
src/agentlens/workloads/: __init__.py  __main__.py  cli.py  failure_injection.py  generator.py  mock_generator.py  runner.py  validator.py
summaries/: sess-001.json
tests/: test_aggregator.py  test_analysis.py  test_analysis_plots.py  test_hashing.py  test_integration.py  test_langchain_handler.py  test_leakage.py  test_pii_generator.py  test_pipeline.py  test_reidentification.py  test_runner.py  test_schema.py  test_summarizer.py  test_tracer.py  test_validator.py  test_workload_generator.py  test_writer.py
tests/fixtures/: invalid_trace_01.json  valid_trace_01.json  valid_trace_02.json
