[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens"
version = "0.1.0"
description = "Privacy-preserving observability framework for LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "xxhash>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
aggregation = ["anthropic>=0.40.0"]
privacy = ["matplotlib>=3.5.0", "anthropic>=0.40.0"]
langchain = ["langchain-core>=0.1.0"]
examples = ["anthropic[bedrock]>=0.40.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentlens"]

[project.scripts]
agentlens = "agentlens.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
