[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens"
version = "0.1.0"
description = "Privacy-preserving observability framework for LLM agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Anupam Mediratta", email = "anupamme@gmail.com"},
]
keywords = ["llm", "agents", "observability", "privacy", "tracing", "oversight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "xxhash>=3.0",
]

[project.urls]
Homepage = "https://github.com/anupamme/AgentLens"
Repository = "https://github.com/anupamme/AgentLens"
Issues = "https://github.com/anupamme/AgentLens/issues"
Documentation = "https://github.com/anupamme/AgentLens/blob/main/README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
aggregation = ["anthropic>=0.40.0"]
analysis = ["matplotlib>=3.5.0"]
privacy = ["matplotlib>=3.5.0", "anthropic>=0.40.0"]
langchain = ["langchain-core>=0.1.0"]
workloads = ["anthropic>=0.40.0"]
examples = ["anthropic[bedrock]>=0.40.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentlens"]

[project.scripts]
agentlens = "agentlens.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
